force-app/main/default/objects/API_Log__e/API_Log__e.object-meta.xml
<CustomObject>
    <description>API Log event fired in case of errors raised by the call of an external API.
Subscribers:
 - Datadog</description>
    <label>API Log</label>
    <pluralLabel>API Logs</pluralLabel>
</CustomObject>