force-app/main/default/objects/API_Log__e/fields/Body_Received__c.field-meta.xml
<CustomField>
    <fullName>Body_Received__c</fullName>
    <label>Body Received</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>