force-app/main/default/objects/API_Log__e/fields/Body_Sent__c.field-meta.xml
<CustomField>
    <fullName>Body_Sent__c</fullName>
    <label>Body Sent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>