force-app/main/default/objects/API_Log__e/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>