force-app/main/default/objects/API_Log__e/fields/Url_called__c.field-meta.xml
<CustomField>
    <fullName>Url_called__c</fullName>
    <label>Url called</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>